--- a/SarahEulie_A3.project
+++ b/SarahEulie_A3.project
@@ -25,6 +25,22 @@
             "cityWhile",
             "cityWhile.json"
           ]
+        },
+        {
+          "!type": "External",
+          "file": [
+            "forms",
+            "forReverseStates",
+            "forReverseStates.json"
+          ]
+        },
+        {
+          "!type": "External",
+          "file": [
+            "forms",
+            "dogStore",
+            "dogStore.json"
+          ]
         }
       ],
       "configxml": null,
